src/observer/sql/parser/yacc_sql.output
Terminals unused in grammar

    PATH
    STRING_V


Grammar

    0 $accept: commands $end

    1 commands: %empty
    2         | commands command

    3 command: select
    4        | insert
    5        | update
    6        | delete
    7        | create_table
    8        | drop_table
    9        | show_tables
   10        | desc_table
   11        | create_index
   12        | drop_index
   13        | sync
   14        | begin
   15        | commit
   16        | rollback
   17        | load_data
   18        | help
   19        | exit

   20 exit: EXIT SEMICOLON

   21 help: HELP SEMICOLON

   22 sync: SYNC SEMICOLON

   23 begin: TRX_BEGIN SEMICOLON

   24 commit: TRX_COMMIT SEMICOLON

   25 rollback: TRX_ROLLBACK SEMICOLON

   26 drop_table: DROP TABLE ID SEMICOLON

   27 show_tables: SHOW TABLES SEMICOLON

   28 desc_table: DESC ID SEMICOLON

   29 create_index: CREATE INDEX ID ON ID LBRACE ID RBRACE SEMICOLON
   30             | CREATE UNIQUE INDEX ID ON ID LBRACE ID RBRACE SEMICOLON

   31 drop_index: DROP INDEX ID SEMICOLON

   32 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

   33 attr_def_list: %empty
   34              | COMMA attr_def attr_def_list

   35 attr_def: ID_get type LBRACE number RBRACE opt_null
   36         | ID_get type opt_null

   37 opt_null: %empty
   38         | NOT NULL_T
   39         | NULLABLE

   40 number: NUMBER

   41 type: INT_T
   42     | STRING_T
   43     | FLOAT_T
   44     | DATE_T

   45 ID_get: ID

   46 insert: INSERT INTO ID_get VALUES multi_values SEMICOLON

   47 multi_values: LBRACE value value_list RBRACE
   48             | multi_values COMMA LBRACE value value_list RBRACE

   49 value_list: %empty
   50           | COMMA value value_list

   51 value: NUMBER
   52      | FLOAT
   53      | NULL_T
   54      | SSS

   55 delete: DELETE FROM ID where SEMICOLON

   56 update: UPDATE ID SET ID EQ value where SEMICOLON

   57 select: SELECT select_attr from_rel join_list where group_by order_by SEMICOLON

   58 select_attr: STAR
   59            | select_param attr_list

   60 select_param: id_type
   61             | window_function

   62 id_type: ID
   63        | ID DOT ID
   64        | ID DOT STAR

   65 attr_list: %empty
   66          | COMMA select_param attr_list

   67 join_list: %empty
   68          | INNER JOIN ID on condition

   69 window_function: COUNT LBRACE opt_star RBRACE
   70                | COUNT LBRACE ID DOT ID RBRACE
   71                | COUNT LBRACE ID DOT STAR RBRACE
   72                | OTHER_FUNCTION_TYPE LBRACE ID RBRACE
   73                | OTHER_FUNCTION_TYPE LBRACE ID DOT ID RBRACE
   74                | OTHER_FUNCTION_TYPE LBRACE ID DOT STAR RBRACE

   75 opt_star: STAR
   76         | NUMBER
   77         | ID

   78 from_rel: FROM ID rel_list

   79 rel_list: %empty
   80         | COMMA ID rel_list

   81 where: %empty
   82      | WHERE condition condition_list

   83 on: %empty
   84   | ON condition condition_list

   85 condition_list: %empty
   86               | AND condition condition_list

   87 condition: ID comOp value
   88          | value comOp value
   89          | ID comOp ID
   90          | value comOp ID
   91          | ID DOT ID comOp value
   92          | value comOp ID DOT ID
   93          | ID DOT ID comOp ID DOT ID
   94          | ID IS NULL_T
   95          | ID IS NOT NULL_T
   96          | ID DOT ID IS NULL_T
   97          | ID DOT ID IS NOT NULL_T
   98          | value IS NOT NULL_T
   99          | value IS NULL_T
  100          | ID comOp sub_select
  101          | ID DOT ID comOp sub_select
  102          | value comOp sub_select
  103          | sub_select comOp value
  104          | sub_select comOp ID
  105          | sub_select comOp ID DOT ID

  106 comOp: EQ
  107      | LT
  108      | GT
  109      | LE
  110      | GE
  111      | NE
  112      | IN
  113      | NOT IN

  114 sub_select: LBRACE SELECT select_attr from_rel where RBRACE

  115 group_by: %empty
  116         | GROUP BY group_list

  117 group_list: group_attr
  118           | group_list COMMA group_attr

  119 group_attr: ID
  120           | ID DOT ID

  121 order_by: %empty
  122         | ORDER BY sort_list

  123 sort_list: sort_attr
  124          | sort_list COMMA sort_attr

  125 sort_attr: ID opt_asc
  126          | ID DESC
  127          | ID DOT ID opt_asc
  128          | ID DOT ID DESC

  129 opt_asc: %empty
  130        | ASC

  131 load_data: LOAD DATA INFILE SSS INTO TABLE ID SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SEMICOLON (258) 20 21 22 23 24 25 26 27 28 29 30 31 32 46 55 56 57 131
    CREATE (259) 29 30 32
    DROP (260) 26 31
    TABLE (261) 26 32 131
    TABLES (262) 27
    INDEX (263) 29 30 31
    SELECT (264) 57 114
    DESC (265) 28 126 128
    SHOW (266) 27
    SYNC (267) 22
    INSERT (268) 46
    DELETE (269) 55
    UPDATE (270) 56
    LBRACE (271) 29 30 32 35 47 48 69 70 71 72 73 74 114
    RBRACE (272) 29 30 32 35 47 48 69 70 71 72 73 74 114
    COMMA (273) 34 48 50 66 80 118 124
    TRX_BEGIN (274) 23
    TRX_COMMIT (275) 24
    TRX_ROLLBACK (276) 25
    INT_T (277) 41
    STRING_T (278) 42
    FLOAT_T (279) 43
    ORDER (280) 122
    ASC (281) 130
    BY (282) 116 122
    DATE_T (283) 44
    UNIQUE (284) 30
    HELP (285) 21
    EXIT (286) 20
    DOT (287) 63 64 70 71 73 74 91 92 93 96 97 101 105 120 127 128
    INTO (288) 46 131
    VALUES (289) 46
    FROM (290) 55 78
    WHERE (291) 82
    AND (292) 86
    SET (293) 56
    ON (294) 29 30 84
    LOAD (295) 131
    DATA (296) 131
    INFILE (297) 131
    NULLABLE (298) 39
    GROUP (299) 116
    IS (300) 94 95 96 97 98 99
    NOT (301) 38 95 97 98 113
    EQ (302) 56 106
    LT (303) 107
    GT (304) 108
    LE (305) 109
    GE (306) 110
    NE (307) 111
    NULL_T (308) 38 53 94 95 96 97 98 99
    INNER (309) 68
    JOIN (310) 68
    IN (311) 112 113
    NUMBER <number> (312) 40 51 76
    FLOAT <floats> (313) 52
    ID <string> (314) 26 28 29 30 31 32 45 55 56 62 63 64 68 70 71 72 73 74 77 78 80 87 89 90 91 92 93 94 95 96 97 100 101 104 105 119 120 125 126 127 128 131
    PATH <string> (315)
    SSS <string> (316) 54 131
    STAR <string> (317) 58 64 71 74 75
    STRING_V <string> (318)
    COUNT <string> (319) 69 70 71
    OTHER_FUNCTION_TYPE <string> (320) 72 73 74


Nonterminals, with rules where they appear

    $accept (66)
        on left: 0
    commands (67)
        on left: 1 2
        on right: 0 2
    command (68)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19
        on right: 2
    exit (69)
        on left: 20
        on right: 19
    help (70)
        on left: 21
        on right: 18
    sync (71)
        on left: 22
        on right: 13
    begin (72)
        on left: 23
        on right: 14
    commit (73)
        on left: 24
        on right: 15
    rollback (74)
        on left: 25
        on right: 16
    drop_table (75)
        on left: 26
        on right: 8
    show_tables (76)
        on left: 27
        on right: 9
    desc_table (77)
        on left: 28
        on right: 10
    create_index (78)
        on left: 29 30
        on right: 11
    drop_index (79)
        on left: 31
        on right: 12
    create_table (80)
        on left: 32
        on right: 7
    attr_def_list (81)
        on left: 33 34
        on right: 32 34
    attr_def (82)
        on left: 35 36
        on right: 32 34
    opt_null <number> (83)
        on left: 37 38 39
        on right: 35 36
    number <number> (84)
        on left: 40
        on right: 35
    type <number> (85)
        on left: 41 42 43 44
        on right: 35 36
    ID_get (86)
        on left: 45
        on right: 35 36 46
    insert (87)
        on left: 46
        on right: 4
    multi_values (88)
        on left: 47 48
        on right: 46 48
    value_list (89)
        on left: 49 50
        on right: 47 48 50
    value <value1> (90)
        on left: 51 52 53 54
        on right: 47 48 50 56 87 88 90 91 92 98 99 102 103
    delete (91)
        on left: 55
        on right: 6
    update (92)
        on left: 56
        on right: 5
    select (93)
        on left: 57
        on right: 3
    select_attr <relattr1> (94)
        on left: 58 59
        on right: 57 114
    select_param (95)
        on left: 60 61
        on right: 59 66
    id_type (96)
        on left: 62 63 64
        on right: 60
    attr_list (97)
        on left: 65 66
        on right: 59 66
    join_list (98)
        on left: 67 68
        on right: 57
    window_function (99)
        on left: 69 70 71 72 73 74
        on right: 61
    opt_star <string> (100)
        on left: 75 76 77
        on right: 69
    from_rel <relation> (101)
        on left: 78
        on right: 57 114
    rel_list (102)
        on left: 79 80
        on right: 78 80
    where <condition1> (103)
        on left: 81 82
        on right: 55 56 57 114
    on (104)
        on left: 83 84
        on right: 68
    condition_list (105)
        on left: 85 86
        on right: 82 84 86
    condition <condition1> (106)
        on left: 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
        on right: 68 82 84 86
    comOp (107)
        on left: 106 107 108 109 110 111 112 113
        on right: 87 88 89 90 91 92 93 100 101 102 103 104 105
    sub_select <selnode> (108)
        on left: 114
        on right: 100 101 102 103 104 105
    group_by (109)
        on left: 115 116
        on right: 57
    group_list (110)
        on left: 117 118
        on right: 116 118
    group_attr (111)
        on left: 119 120
        on right: 117 118
    order_by (112)
        on left: 121 122
        on right: 57
    sort_list (113)
        on left: 123 124
        on right: 122 124
    sort_attr (114)
        on left: 125 126 127 128
        on right: 123 124
    opt_asc (115)
        on left: 129 130
        on right: 125 127
    load_data (116)
        on left: 131
        on right: 17


State 0

    0 $accept: . commands $end

    $default  reduce using rule 1 (commands)

    commands  go to state 1


State 1

    0 $accept: commands . $end
    2 commands: commands . command

    $end          shift, and go to state 2
    CREATE        shift, and go to state 3
    DROP          shift, and go to state 4
    SELECT        shift, and go to state 5
    DESC          shift, and go to state 6
    SHOW          shift, and go to state 7
    SYNC          shift, and go to state 8
    INSERT        shift, and go to state 9
    DELETE        shift, and go to state 10
    UPDATE        shift, and go to state 11
    TRX_BEGIN     shift, and go to state 12
    TRX_COMMIT    shift, and go to state 13
    TRX_ROLLBACK  shift, and go to state 14
    HELP          shift, and go to state 15
    EXIT          shift, and go to state 16
    LOAD          shift, and go to state 17

    command       go to state 18
    exit          go to state 19
    help          go to state 20
    sync          go to state 21
    begin         go to state 22
    commit        go to state 23
    rollback      go to state 24
    drop_table    go to state 25
    show_tables   go to state 26
    desc_table    go to state 27
    create_index  go to state 28
    drop_index    go to state 29
    create_table  go to state 30
    insert        go to state 31
    delete        go to state 32
    update        go to state 33
    select        go to state 34
    load_data     go to state 35


State 2

    0 $accept: commands $end .

    $default  accept


State 3

   29 create_index: CREATE . INDEX ID ON ID LBRACE ID RBRACE SEMICOLON
   30             | CREATE . UNIQUE INDEX ID ON ID LBRACE ID RBRACE SEMICOLON
   32 create_table: CREATE . TABLE ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

    TABLE   shift, and go to state 36
    INDEX   shift, and go to state 37
    UNIQUE  shift, and go to state 38


State 4

   26 drop_table: DROP . TABLE ID SEMICOLON
   31 drop_index: DROP . INDEX ID SEMICOLON

    TABLE  shift, and go to state 39
    INDEX  shift, and go to state 40


State 5

   57 select: SELECT . select_attr from_rel join_list where group_by order_by SEMICOLON

    ID                   shift, and go to state 41
    STAR                 shift, and go to state 42
    COUNT                shift, and go to state 43
    OTHER_FUNCTION_TYPE  shift, and go to state 44

    select_attr      go to state 45
    select_param     go to state 46
    id_type          go to state 47
    window_function  go to state 48


State 6

   28 desc_table: DESC . ID SEMICOLON

    ID  shift, and go to state 49


State 7

   27 show_tables: SHOW . TABLES SEMICOLON

    TABLES  shift, and go to state 50


State 8

   22 sync: SYNC . SEMICOLON

    SEMICOLON  shift, and go to state 51


State 9

   46 insert: INSERT . INTO ID_get VALUES multi_values SEMICOLON

    INTO  shift, and go to state 52


State 10

   55 delete: DELETE . FROM ID where SEMICOLON

    FROM  shift, and go to state 53


State 11

   56 update: UPDATE . ID SET ID EQ value where SEMICOLON

    ID  shift, and go to state 54


State 12

   23 begin: TRX_BEGIN . SEMICOLON

    SEMICOLON  shift, and go to state 55


State 13

   24 commit: TRX_COMMIT . SEMICOLON

    SEMICOLON  shift, and go to state 56


State 14

   25 rollback: TRX_ROLLBACK . SEMICOLON

    SEMICOLON  shift, and go to state 57


State 15

   21 help: HELP . SEMICOLON

    SEMICOLON  shift, and go to state 58


State 16

   20 exit: EXIT . SEMICOLON

    SEMICOLON  shift, and go to state 59


State 17

  131 load_data: LOAD . DATA INFILE SSS INTO TABLE ID SEMICOLON

    DATA  shift, and go to state 60


State 18

    2 commands: commands command .

    $default  reduce using rule 2 (commands)


State 19

   19 command: exit .

    $default  reduce using rule 19 (command)


State 20

   18 command: help .

    $default  reduce using rule 18 (command)


State 21

   13 command: sync .

    $default  reduce using rule 13 (command)


State 22

   14 command: begin .

    $default  reduce using rule 14 (command)


State 23

   15 command: commit .

    $default  reduce using rule 15 (command)


State 24

   16 command: rollback .

    $default  reduce using rule 16 (command)


State 25

    8 command: drop_table .

    $default  reduce using rule 8 (command)


State 26

    9 command: show_tables .

    $default  reduce using rule 9 (command)


State 27

   10 command: desc_table .

    $default  reduce using rule 10 (command)


State 28

   11 command: create_index .

    $default  reduce using rule 11 (command)


State 29

   12 command: drop_index .

    $default  reduce using rule 12 (command)


State 30

    7 command: create_table .

    $default  reduce using rule 7 (command)


State 31

    4 command: insert .

    $default  reduce using rule 4 (command)


State 32

    6 command: delete .

    $default  reduce using rule 6 (command)


State 33

    5 command: update .

    $default  reduce using rule 5 (command)


State 34

    3 command: select .

    $default  reduce using rule 3 (command)


State 35

   17 command: load_data .

    $default  reduce using rule 17 (command)


State 36

   32 create_table: CREATE TABLE . ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

    ID  shift, and go to state 61


State 37

   29 create_index: CREATE INDEX . ID ON ID LBRACE ID RBRACE SEMICOLON

    ID  shift, and go to state 62


State 38

   30 create_index: CREATE UNIQUE . INDEX ID ON ID LBRACE ID RBRACE SEMICOLON

    INDEX  shift, and go to state 63


State 39

   26 drop_table: DROP TABLE . ID SEMICOLON

    ID  shift, and go to state 64


State 40

   31 drop_index: DROP INDEX . ID SEMICOLON

    ID  shift, and go to state 65


State 41

   62 id_type: ID .
   63        | ID . DOT ID
   64        | ID . DOT STAR

    DOT  shift, and go to state 66

    $default  reduce using rule 62 (id_type)


State 42

   58 select_attr: STAR .

    $default  reduce using rule 58 (select_attr)


State 43

   69 window_function: COUNT . LBRACE opt_star RBRACE
   70                | COUNT . LBRACE ID DOT ID RBRACE
   71                | COUNT . LBRACE ID DOT STAR RBRACE

    LBRACE  shift, and go to state 67


State 44

   72 window_function: OTHER_FUNCTION_TYPE . LBRACE ID RBRACE
   73                | OTHER_FUNCTION_TYPE . LBRACE ID DOT ID RBRACE
   74                | OTHER_FUNCTION_TYPE . LBRACE ID DOT STAR RBRACE

    LBRACE  shift, and go to state 68


State 45

   57 select: SELECT select_attr . from_rel join_list where group_by order_by SEMICOLON

    FROM  shift, and go to state 69

    from_rel  go to state 70


State 46

   59 select_attr: select_param . attr_list

    COMMA  shift, and go to state 71

    $default  reduce using rule 65 (attr_list)

    attr_list  go to state 72


State 47

   60 select_param: id_type .

    $default  reduce using rule 60 (select_param)


State 48

   61 select_param: window_function .

    $default  reduce using rule 61 (select_param)


State 49

   28 desc_table: DESC ID . SEMICOLON

    SEMICOLON  shift, and go to state 73


State 50

   27 show_tables: SHOW TABLES . SEMICOLON

    SEMICOLON  shift, and go to state 74


State 51

   22 sync: SYNC SEMICOLON .

    $default  reduce using rule 22 (sync)


State 52

   46 insert: INSERT INTO . ID_get VALUES multi_values SEMICOLON

    ID  shift, and go to state 75

    ID_get  go to state 76


State 53

   55 delete: DELETE FROM . ID where SEMICOLON

    ID  shift, and go to state 77


State 54

   56 update: UPDATE ID . SET ID EQ value where SEMICOLON

    SET  shift, and go to state 78


State 55

   23 begin: TRX_BEGIN SEMICOLON .

    $default  reduce using rule 23 (begin)


State 56

   24 commit: TRX_COMMIT SEMICOLON .

    $default  reduce using rule 24 (commit)


State 57

   25 rollback: TRX_ROLLBACK SEMICOLON .

    $default  reduce using rule 25 (rollback)


State 58

   21 help: HELP SEMICOLON .

    $default  reduce using rule 21 (help)


State 59

   20 exit: EXIT SEMICOLON .

    $default  reduce using rule 20 (exit)


State 60

  131 load_data: LOAD DATA . INFILE SSS INTO TABLE ID SEMICOLON

    INFILE  shift, and go to state 79


State 61

   32 create_table: CREATE TABLE ID . LBRACE attr_def attr_def_list RBRACE SEMICOLON

    LBRACE  shift, and go to state 80


State 62

   29 create_index: CREATE INDEX ID . ON ID LBRACE ID RBRACE SEMICOLON

    ON  shift, and go to state 81


State 63

   30 create_index: CREATE UNIQUE INDEX . ID ON ID LBRACE ID RBRACE SEMICOLON

    ID  shift, and go to state 82


State 64

   26 drop_table: DROP TABLE ID . SEMICOLON

    SEMICOLON  shift, and go to state 83


State 65

   31 drop_index: DROP INDEX ID . SEMICOLON

    SEMICOLON  shift, and go to state 84


State 66

   63 id_type: ID DOT . ID
   64        | ID DOT . STAR

    ID    shift, and go to state 85
    STAR  shift, and go to state 86


State 67

   69 window_function: COUNT LBRACE . opt_star RBRACE
   70                | COUNT LBRACE . ID DOT ID RBRACE
   71                | COUNT LBRACE . ID DOT STAR RBRACE

    NUMBER  shift, and go to state 87
    ID      shift, and go to state 88
    STAR    shift, and go to state 89

    opt_star  go to state 90


State 68

   72 window_function: OTHER_FUNCTION_TYPE LBRACE . ID RBRACE
   73                | OTHER_FUNCTION_TYPE LBRACE . ID DOT ID RBRACE
   74                | OTHER_FUNCTION_TYPE LBRACE . ID DOT STAR RBRACE

    ID  shift, and go to state 91


State 69

   78 from_rel: FROM . ID rel_list

    ID  shift, and go to state 92


State 70

   57 select: SELECT select_attr from_rel . join_list where group_by order_by SEMICOLON

    INNER  shift, and go to state 93

    $default  reduce using rule 67 (join_list)

    join_list  go to state 94


State 71

   66 attr_list: COMMA . select_param attr_list

    ID                   shift, and go to state 41
    COUNT                shift, and go to state 43
    OTHER_FUNCTION_TYPE  shift, and go to state 44

    select_param     go to state 95
    id_type          go to state 47
    window_function  go to state 48


State 72

   59 select_attr: select_param attr_list .

    $default  reduce using rule 59 (select_attr)


State 73

   28 desc_table: DESC ID SEMICOLON .

    $default  reduce using rule 28 (desc_table)


State 74

   27 show_tables: SHOW TABLES SEMICOLON .

    $default  reduce using rule 27 (show_tables)


State 75

   45 ID_get: ID .

    $default  reduce using rule 45 (ID_get)


State 76

   46 insert: INSERT INTO ID_get . VALUES multi_values SEMICOLON

    VALUES  shift, and go to state 96


State 77

   55 delete: DELETE FROM ID . where SEMICOLON

    WHERE  shift, and go to state 97

    $default  reduce using rule 81 (where)

    where  go to state 98


State 78

   56 update: UPDATE ID SET . ID EQ value where SEMICOLON

    ID  shift, and go to state 99


State 79

  131 load_data: LOAD DATA INFILE . SSS INTO TABLE ID SEMICOLON

    SSS  shift, and go to state 100


State 80

   32 create_table: CREATE TABLE ID LBRACE . attr_def attr_def_list RBRACE SEMICOLON

    ID  shift, and go to state 75

    attr_def  go to state 101
    ID_get    go to state 102


State 81

   29 create_index: CREATE INDEX ID ON . ID LBRACE ID RBRACE SEMICOLON

    ID  shift, and go to state 103


State 82

   30 create_index: CREATE UNIQUE INDEX ID . ON ID LBRACE ID RBRACE SEMICOLON

    ON  shift, and go to state 104


State 83

   26 drop_table: DROP TABLE ID SEMICOLON .

    $default  reduce using rule 26 (drop_table)


State 84

   31 drop_index: DROP INDEX ID SEMICOLON .

    $default  reduce using rule 31 (drop_index)


State 85

   63 id_type: ID DOT ID .

    $default  reduce using rule 63 (id_type)


State 86

   64 id_type: ID DOT STAR .

    $default  reduce using rule 64 (id_type)


State 87

   76 opt_star: NUMBER .

    $default  reduce using rule 76 (opt_star)


State 88

   70 window_function: COUNT LBRACE ID . DOT ID RBRACE
   71                | COUNT LBRACE ID . DOT STAR RBRACE
   77 opt_star: ID .

    DOT  shift, and go to state 105

    $default  reduce using rule 77 (opt_star)


State 89

   75 opt_star: STAR .

    $default  reduce using rule 75 (opt_star)


State 90

   69 window_function: COUNT LBRACE opt_star . RBRACE

    RBRACE  shift, and go to state 106


State 91

   72 window_function: OTHER_FUNCTION_TYPE LBRACE ID . RBRACE
   73                | OTHER_FUNCTION_TYPE LBRACE ID . DOT ID RBRACE
   74                | OTHER_FUNCTION_TYPE LBRACE ID . DOT STAR RBRACE

    RBRACE  shift, and go to state 107
    DOT     shift, and go to state 108


State 92

   78 from_rel: FROM ID . rel_list

    COMMA  shift, and go to state 109

    $default  reduce using rule 79 (rel_list)

    rel_list  go to state 110


State 93

   68 join_list: INNER . JOIN ID on condition

    JOIN  shift, and go to state 111


State 94

   57 select: SELECT select_attr from_rel join_list . where group_by order_by SEMICOLON

    WHERE  shift, and go to state 97

    $default  reduce using rule 81 (where)

    where  go to state 112


State 95

   66 attr_list: COMMA select_param . attr_list

    COMMA  shift, and go to state 71

    $default  reduce using rule 65 (attr_list)

    attr_list  go to state 113


State 96

   46 insert: INSERT INTO ID_get VALUES . multi_values SEMICOLON

    LBRACE  shift, and go to state 114

    multi_values  go to state 115


State 97

   82 where: WHERE . condition condition_list

    LBRACE  shift, and go to state 116
    NULL_T  shift, and go to state 117
    NUMBER  shift, and go to state 118
    FLOAT   shift, and go to state 119
    ID      shift, and go to state 120
    SSS     shift, and go to state 121

    value       go to state 122
    condition   go to state 123
    sub_select  go to state 124


State 98

   55 delete: DELETE FROM ID where . SEMICOLON

    SEMICOLON  shift, and go to state 125


State 99

   56 update: UPDATE ID SET ID . EQ value where SEMICOLON

    EQ  shift, and go to state 126


State 100

  131 load_data: LOAD DATA INFILE SSS . INTO TABLE ID SEMICOLON

    INTO  shift, and go to state 127


State 101

   32 create_table: CREATE TABLE ID LBRACE attr_def . attr_def_list RBRACE SEMICOLON

    COMMA  shift, and go to state 128

    $default  reduce using rule 33 (attr_def_list)

    attr_def_list  go to state 129


State 102

   35 attr_def: ID_get . type LBRACE number RBRACE opt_null
   36         | ID_get . type opt_null

    INT_T     shift, and go to state 130
    STRING_T  shift, and go to state 131
    FLOAT_T   shift, and go to state 132
    DATE_T    shift, and go to state 133

    type  go to state 134


State 103

   29 create_index: CREATE INDEX ID ON ID . LBRACE ID RBRACE SEMICOLON

    LBRACE  shift, and go to state 135


State 104

   30 create_index: CREATE UNIQUE INDEX ID ON . ID LBRACE ID RBRACE SEMICOLON

    ID  shift, and go to state 136


State 105

   70 window_function: COUNT LBRACE ID DOT . ID RBRACE
   71                | COUNT LBRACE ID DOT . STAR RBRACE

    ID    shift, and go to state 137
    STAR  shift, and go to state 138


State 106

   69 window_function: COUNT LBRACE opt_star RBRACE .

    $default  reduce using rule 69 (window_function)


State 107

   72 window_function: OTHER_FUNCTION_TYPE LBRACE ID RBRACE .

    $default  reduce using rule 72 (window_function)


State 108

   73 window_function: OTHER_FUNCTION_TYPE LBRACE ID DOT . ID RBRACE
   74                | OTHER_FUNCTION_TYPE LBRACE ID DOT . STAR RBRACE

    ID    shift, and go to state 139
    STAR  shift, and go to state 140


State 109

   80 rel_list: COMMA . ID rel_list

    ID  shift, and go to state 141


State 110

   78 from_rel: FROM ID rel_list .

    $default  reduce using rule 78 (from_rel)


State 111

   68 join_list: INNER JOIN . ID on condition

    ID  shift, and go to state 142


State 112

   57 select: SELECT select_attr from_rel join_list where . group_by order_by SEMICOLON

    GROUP  shift, and go to state 143

    $default  reduce using rule 115 (group_by)

    group_by  go to state 144


State 113

   66 attr_list: COMMA select_param attr_list .

    $default  reduce using rule 66 (attr_list)


State 114

   47 multi_values: LBRACE . value value_list RBRACE

    NULL_T  shift, and go to state 117
    NUMBER  shift, and go to state 118
    FLOAT   shift, and go to state 119
    SSS     shift, and go to state 121

    value  go to state 145


State 115

   46 insert: INSERT INTO ID_get VALUES multi_values . SEMICOLON
   48 multi_values: multi_values . COMMA LBRACE value value_list RBRACE

    SEMICOLON  shift, and go to state 146
    COMMA      shift, and go to state 147


State 116

  114 sub_select: LBRACE . SELECT select_attr from_rel where RBRACE

    SELECT  shift, and go to state 148


State 117

   53 value: NULL_T .

    $default  reduce using rule 53 (value)


State 118

   51 value: NUMBER .

    $default  reduce using rule 51 (value)


State 119

   52 value: FLOAT .

    $default  reduce using rule 52 (value)


State 120

   87 condition: ID . comOp value
   89          | ID . comOp ID
   91          | ID . DOT ID comOp value
   93          | ID . DOT ID comOp ID DOT ID
   94          | ID . IS NULL_T
   95          | ID . IS NOT NULL_T
   96          | ID . DOT ID IS NULL_T
   97          | ID . DOT ID IS NOT NULL_T
  100          | ID . comOp sub_select
  101          | ID . DOT ID comOp sub_select

    DOT  shift, and go to state 149
    IS   shift, and go to state 150
    NOT  shift, and go to state 151
    EQ   shift, and go to state 152
    LT   shift, and go to state 153
    GT   shift, and go to state 154
    LE   shift, and go to state 155
    GE   shift, and go to state 156
    NE   shift, and go to state 157
    IN   shift, and go to state 158

    comOp  go to state 159


State 121

   54 value: SSS .

    $default  reduce using rule 54 (value)


State 122

   88 condition: value . comOp value
   90          | value . comOp ID
   92          | value . comOp ID DOT ID
   98          | value . IS NOT NULL_T
   99          | value . IS NULL_T
  102          | value . comOp sub_select

    IS   shift, and go to state 160
    NOT  shift, and go to state 151
    EQ   shift, and go to state 152
    LT   shift, and go to state 153
    GT   shift, and go to state 154
    LE   shift, and go to state 155
    GE   shift, and go to state 156
    NE   shift, and go to state 157
    IN   shift, and go to state 158

    comOp  go to state 161


State 123

   82 where: WHERE condition . condition_list

    AND  shift, and go to state 162

    $default  reduce using rule 85 (condition_list)

    condition_list  go to state 163


State 124

  103 condition: sub_select . comOp value
  104          | sub_select . comOp ID
  105          | sub_select . comOp ID DOT ID

    NOT  shift, and go to state 151
    EQ   shift, and go to state 152
    LT   shift, and go to state 153
    GT   shift, and go to state 154
    LE   shift, and go to state 155
    GE   shift, and go to state 156
    NE   shift, and go to state 157
    IN   shift, and go to state 158

    comOp  go to state 164


State 125

   55 delete: DELETE FROM ID where SEMICOLON .

    $default  reduce using rule 55 (delete)


State 126

   56 update: UPDATE ID SET ID EQ . value where SEMICOLON

    NULL_T  shift, and go to state 117
    NUMBER  shift, and go to state 118
    FLOAT   shift, and go to state 119
    SSS     shift, and go to state 121

    value  go to state 165


State 127

  131 load_data: LOAD DATA INFILE SSS INTO . TABLE ID SEMICOLON

    TABLE  shift, and go to state 166


State 128

   34 attr_def_list: COMMA . attr_def attr_def_list

    ID  shift, and go to state 75

    attr_def  go to state 167
    ID_get    go to state 102


State 129

   32 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list . RBRACE SEMICOLON

    RBRACE  shift, and go to state 168


State 130

   41 type: INT_T .

    $default  reduce using rule 41 (type)


State 131

   42 type: STRING_T .

    $default  reduce using rule 42 (type)


State 132

   43 type: FLOAT_T .

    $default  reduce using rule 43 (type)


State 133

   44 type: DATE_T .

    $default  reduce using rule 44 (type)


State 134

   35 attr_def: ID_get type . LBRACE number RBRACE opt_null
   36         | ID_get type . opt_null

    LBRACE    shift, and go to state 169
    NULLABLE  shift, and go to state 170
    NOT       shift, and go to state 171

    $default  reduce using rule 37 (opt_null)

    opt_null  go to state 172


State 135

   29 create_index: CREATE INDEX ID ON ID LBRACE . ID RBRACE SEMICOLON

    ID  shift, and go to state 173


State 136

   30 create_index: CREATE UNIQUE INDEX ID ON ID . LBRACE ID RBRACE SEMICOLON

    LBRACE  shift, and go to state 174


State 137

   70 window_function: COUNT LBRACE ID DOT ID . RBRACE

    RBRACE  shift, and go to state 175


State 138

   71 window_function: COUNT LBRACE ID DOT STAR . RBRACE

    RBRACE  shift, and go to state 176


State 139

   73 window_function: OTHER_FUNCTION_TYPE LBRACE ID DOT ID . RBRACE

    RBRACE  shift, and go to state 177


State 140

   74 window_function: OTHER_FUNCTION_TYPE LBRACE ID DOT STAR . RBRACE

    RBRACE  shift, and go to state 178


State 141

   80 rel_list: COMMA ID . rel_list

    COMMA  shift, and go to state 109

    $default  reduce using rule 79 (rel_list)

    rel_list  go to state 179


State 142

   68 join_list: INNER JOIN ID . on condition

    ON  shift, and go to state 180

    $default  reduce using rule 83 (on)

    on  go to state 181


State 143

  116 group_by: GROUP . BY group_list

    BY  shift, and go to state 182


State 144

   57 select: SELECT select_attr from_rel join_list where group_by . order_by SEMICOLON

    ORDER  shift, and go to state 183

    $default  reduce using rule 121 (order_by)

    order_by  go to state 184


State 145

   47 multi_values: LBRACE value . value_list RBRACE

    COMMA  shift, and go to state 185

    $default  reduce using rule 49 (value_list)

    value_list  go to state 186


State 146

   46 insert: INSERT INTO ID_get VALUES multi_values SEMICOLON .

    $default  reduce using rule 46 (insert)


State 147

   48 multi_values: multi_values COMMA . LBRACE value value_list RBRACE

    LBRACE  shift, and go to state 187


State 148

  114 sub_select: LBRACE SELECT . select_attr from_rel where RBRACE

    ID                   shift, and go to state 41
    STAR                 shift, and go to state 42
    COUNT                shift, and go to state 43
    OTHER_FUNCTION_TYPE  shift, and go to state 44

    select_attr      go to state 188
    select_param     go to state 46
    id_type          go to state 47
    window_function  go to state 48


State 149

   91 condition: ID DOT . ID comOp value
   93          | ID DOT . ID comOp ID DOT ID
   96          | ID DOT . ID IS NULL_T
   97          | ID DOT . ID IS NOT NULL_T
  101          | ID DOT . ID comOp sub_select

    ID  shift, and go to state 189


State 150

   94 condition: ID IS . NULL_T
   95          | ID IS . NOT NULL_T

    NOT     shift, and go to state 190
    NULL_T  shift, and go to state 191


State 151

  113 comOp: NOT . IN

    IN  shift, and go to state 192


State 152

  106 comOp: EQ .

    $default  reduce using rule 106 (comOp)


State 153

  107 comOp: LT .

    $default  reduce using rule 107 (comOp)


State 154

  108 comOp: GT .

    $default  reduce using rule 108 (comOp)


State 155

  109 comOp: LE .

    $default  reduce using rule 109 (comOp)


State 156

  110 comOp: GE .

    $default  reduce using rule 110 (comOp)


State 157

  111 comOp: NE .

    $default  reduce using rule 111 (comOp)


State 158

  112 comOp: IN .
